[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "eval_type_backport/version.py"
write_to_template = "__version__ = '{version}'"

[tool.pyright]
venvPath = "."
venv = "venv"

[tool.ruff]
line-length = 89
flake8-quotes = {inline-quotes = 'single', multiline-quotes = 'double'}
mccabe = { max-complexity = 14 }
target-version = "py38"

[tool.ruff.format]
quote-style = 'single'
