[metadata]
name = eval_type_backport
author = Alex Hall
author_email = alex.mojaki@gmail.com
license = MIT
description = Like `typing._eval_type`, but lets older Python versions use newer typing features.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexmojaki/eval_type_backport
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = eval_type_backport
zip_safe = False
include_package_data = True
setup_requires = setuptools; setuptools_scm[toml]
python_requires = >=3.8

[options.extras_require]
tests=
    pytest

[options.package_data]
eval_type_backport = py.typed

[coverage:run]
branch = true
relative_files = true
